--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hello</h1>
         <div>
             <button class="submit">
-                Submit
+                Submit button
             </button>
 
 
