--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="styles/bootstrap.min.css" />
+
         <title>
             Project-2
         </title>
@@ -10,8 +10,8 @@
     <body>
         <h1>Hello</h1>
         <div>
-            <button class="submit">
-                Submit button
+            <button id="fetch-from-api">
+                Fetch Gifs for Teaching
             </button>
 
 
@@ -24,6 +24,22 @@
 
         <script src="scripts/jquery-3.5.1.min.js"></script>
         <script src="scripts/bootstrap.min.js"></script>
+        <script>$( document ).ready(function() {
+            console.log( "ready!" );
+            $('#fetch-from-api').on('click', () => {
+                console.log('I was clicked');
+            $.get('https://api.giphy.com/v1/gifs/search?api-key=bu2jBN3FbA4qjHRnUR5hglMKejHnNNCRq=testing',
+                function(giphyResponse) {
+                    console.log(gifhyResponse);
+                    console.log('gifhyData', gifhyResponse.data)
+                //$( ".result" ).html( data );
+                //alert( "Load was performed." );
+              });
+            })
+        });
+        </script>
+        <link rel="stylesheet" href="main.js" />
+        
     </body>
     
 </html>
