5th commit - added js for search engine

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Project-2</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 
     <script src="main.js"></script>
@@ -11,10 +11,18 @@
     
   </head>
   <body>
+      <div class="container">
+        <div class="jumbotron">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+          </div>
+      </div>
 
 
-    <div id='first-result-image'>
-        <button id='fetch-from-api'>Fetch Giphy for Corona</button>
+    <input type="text" id="search-field">
+    <button id="search-button">Search</button>
+    <div id="search-results">
 
     </div>
 
