--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-   <div class="container sm:text-center">
+   <div class="container">
         <div class="jumbotron">
             <span class="font-bold text-xl tracking-tight">GIFHY Search API</span>
             <br></br>
@@ -28,30 +28,16 @@
             </div>
           </div>
       </div>
-
-        
-    <br></br>
+ 
     <br></br>
     <br></br>
     <input type='text' id='search-field' style="border: 1px solid" />
-    <button id='search-button'>Search</button>
+    <button id="search-button" class="border 1px solid">Search</button>
 
     <div id='search-results' class="grid grid-cols-12 gap-4 bg-gray-100 col-span-12 sm:col-span-6 md:col-span-4">
 
     </div>
 
-    <br />
-    <br />
-    <br />
-
-    <!-- <div class="grid grid-cols-12 gap-2 bg-gray-100">
-      <div class="text-gray-700 text-center col-span-12 sm:col-span-6 md:col-span-4">1</div>
-      <div class="text-gray-700 text-center col-span-12 sm:col-span-6 md:col-span-4">2</div>
-      <div class="text-gray-700 text-center col-span-12 sm:col-span-6 md:col-span-4">3</div>
-      <div class="text-gray-700 text-center col-span-12 sm:col-span-6 md:col-span-4">4</div>
-      <div class="text-gray-700 text-center col-span-12 sm:col-span-6 md:col-span-4">5</div>
-      <div class="text-gray-700 text-center col-span-12 sm:col-span-6 md:col-span-4">6</div>
-    </div> -->
 
     
   </body>
