12th commit - added a readme file

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
       </div>
  
     <br></br>
-    <br></br>
+    <h1 class="text-center bold">Search for your Gif here</h1>
+   
     <div class="text-center">
         <input type='text' id='search-field' style="border: 1px solid" />
         <br></br>
-        <button id="search-button" class="border 1px solid">Search</button>
+        <button type="submit" id="search-button" class="border 1px solid">Submit</button>
     </div>
       <br></br>
       <br></br>
