19th commit - added nav and text align

--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
   </head>
   <body>
    <div>
-        <div class="jumbotron">
-            <span class="font-bold text-xl tracking-tight">GIFHY Search API</span>
-            <br></br>
-            <div class="text-sm lg:flex-grow">
-                <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white-200 hover:text-white mr-4">
-                Search
-                </a>
-                <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white-200 hover:text-white mr-4">
-                About
-                </a>
-                <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white-200 hover:text-white">
-                Contact Us
-                </a>
+    <div class="jumbotron">
+            <nav>
+                <span class="font-bold text-3xl tracking-tight">GIFHY Search API</span>
+                    <div class="text-sm lg:flex-grow">
+                        <div class="xs:text-center md:text-right">
+                            <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white-200 hover:text-white mr-4">
+                            Search
+                            </a>
+                            <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white-200 hover:text-white mr-4">
+                            About
+                            </a>
+                            <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white-200 hover:text-white">
+                            Contact Us
+                            </a>
+                        </div>
+                    </div>
+                </nav>
             </div>
-          </div>
-      </div>
+        </div>
  
     <br></br>
     <h1 class="text-center bold">Search for your Gif here</h1>
